--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 numpy>=1.21.0
 matplotlib>=3.4.0
+scipy>=1.7.0
+pefile>=2023.2.7  # For analyzing Windows executables
+pywin32>=306; sys_platform == 'win32'  # For Windows-specific features
+python-dotenv>=1.0.0  # For environment variable management
+psutil>=5.9.0  # For process management
+tqdm>=4.65.0  # For progress bars
+colorama>=0.4.6  # For colored terminal output
+pyyaml>=6.0  # For YAML config files
+requests>=2.31.0  # For potential web requests
+pandas>=2.0.0  # For data analysis
 tk>=0.1.0  # For GUI 
