--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ pyyaml>=6.0  # For YAML config files
 requests>=2.31.0  # For potential web requests
 pandas>=2.0.0  # For data analysis
 tk>=0.1.0  # For GUI 
+homopy
+composipy
