--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ pandas
 pytest
 sympy
 symopt
+fiberoripy
+plotly
+sphinx==6.2.1
+sphinx-rtd-theme==1.2.2
+nbsphinx
+sphinxcontrib-napoleon
+sphinxcontrib-svg2pdfconverter[Cairosvg]
+
